<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/feedback_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_feedback_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_description_title"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_below="@+id/feedback_title"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/tv_feedback_description_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo" />


        <TextView
            android:id="@+id/tv_feedback_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_image"
            android:layout_centerHorizontal="true"
            android:text="@string/feedback_description"
            android:textAlignment="center"
            android:textSize="18sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">



            <Button
                android:id="@+id/btn_feedbackform"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="160dp"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="160dp"
                android:background="@drawable/feedback_btn_bg"
                android:paddingHorizontal="15dp"
                android:text="Feedback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


</LinearLayout>